<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_home"
            android:icon="@drawable/ic_home_green"
            android:title="@string/home"
            android:checked="true" />
        <item
            android:id="@+id/nav_drawer_profile"
            android:icon="@drawable/ic_person_green"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_drawer_histories"
            android:icon="@drawable/ic_history_green"
            android:title="@string/histories" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_change_password"
            android:icon="@drawable/ic_change_password"
            android:title="@string/change_password" />

        <item
            android:id="@+id/nav_drawer_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/about" />
    </group>
</menu>