<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.score.ScoreActivity">

    <TextView
        android:id="@+id/txt_new_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_new_score"
        android:textColor="@color/green_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_value_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_value_score"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_new_score"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/txt_new_score"
        app:layout_constraintTop_toBottomOf="@+id/txt_new_score" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_score"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_value_score"
        tools:listitem="@layout/item_score" />

    <Button
        android:id="@+id/btn_save_score"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel_score"
        app:layout_constraintEnd_toEndOf="@+id/rv_score"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel_score"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_cancel_score"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        android:text="@string/home"
        android:textColor="@color/green_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_score"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="@+id/rv_score"
        app:layout_constraintTop_toBottomOf="@+id/rv_score"
        app:layout_constraintVertical_bias="0.524" />

</androidx.constraintlayout.widget.ConstraintLayout>